hphp/test/zend/good/ext/mcrypt/tests/mcrypt_module_get_supported_key_sizes.php
<?php
var_dump(mcrypt_module_get_supported_key_sizes(MCRYPT_RIJNDAEL_256));
var_dump(mcrypt_module_get_supported_key_sizes(MCRYPT_RC2));