hphp/test/zend/bad/Zend/tests/get_called_class_001.php
<?php

var_dump(get_called_class());

?>